# _C_CPP_Template

./: .gitignore  CMakeLists.txt  README.md  RUN_TESTS.bat  RUN_TESTS.sh
cmake/: fetch_googletest.cmake  fetch_unity.cmake  internal_utils.cmake
doc/: config.h
